# Flint

./: .gitignore  README.md  buf.gen.yaml  buf.yaml  bufbodge.py  main.py  protoc.sh  pyproject.toml  test.py  test_protoc.sh
flint/: .goreleaser.yaml  go.mod  go.sum  main.go  stack.out  stacks.go
flint/cmd/: common.go  deploy.go  destroy.go  diff.go  list.go  rollback.go  root.go  synth.go
flint/core/: stack.go  stack_type.go
flint/core/base/: base_structs.go  cloud_client.go  connection.go  conventions.go  k8s_connection.go  resource_type.go  stack_type.go  unresource.go
flint/core/util/: deploy_print.go  http_client.go
protobuf/: phone_type.proto  thing.proto
protobuf/common/: flint_deployment.proto  port.proto  stack_.proto
protobuf/gen_base/: port.proto
protobuf/general/: stack.proto
protobuf/k8s/: _stack.proto  daemon_set.proto  deployment.proto  k8s_connection.proto  k8s_stack.proto  k8s_stack_.proto  pod.proto  pvc.proto  secret.proto  service.proto  service_.proto  stateful_set.proto
pyflint/: K8SStack.py  __init__.py  k8s_stack.py  stack.py
pyflint/common/: __init__.py  base_stack.py
pyflint/k8s/: K8SOutput.py  K8SStack.py  __init__.py  output.py  secret.py  service.py
