[project]
name = "flint-python"
version = "$VERSION"
description = "A BLAZING FAST Cloud Development Kit with a chance of meatballs."
readme = "README.md"
requires-python = ">=3.14"
license = { file = "LICENSE" }
authors = [
    { name = "Yoav Oren" }
]
dependencies = [
    "typeguard",
    "betterproto2",
]

# If your module is src-layout
[tool.setuptools]
packages = { find = { where = ["."] } }